# InspireMateBot

./: .gitignore  CONTRIBUTING.md  FUNDING.yml  LICENSE  README.md  keep_alive.py  main.py  pyproject.toml  replit_zip_error_log.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
CODE_OF_CONDUCT.md/: CODE_OF_CONDUCT.md
